<resources>
    <string name="app_name">SPark</string>
    <string name="action_settings">设置</string>
    <string name="comment_remark">所有跟帖（点击后会在本应用中打开）</string>
    <string name="action_eliteArea">精华区</string>
    <string name="site_map_tab_title">论坛列表</string>
    <string name="title_activity_main">SPark</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">留园阅读</string>
    <string name="nav_header_subtitle">wenhelinlu@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">搜索</string>
    <string name="action_favorite">我的收藏</string>
    <string name="action_sort">排序</string>
    <string name="action_sort_title">标题</string>
    <string name="action_sort_author">作者</string>
    <string name="action_sort_insertDate">收藏时间</string>
    <string name="ic_menu_forum">论坛</string>
    <string name="ic_menu_nightMode">夜间模式</string>
    <string name="action_classicEroticaArticleList">经典书库</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_fullscreen1">FullscreenActivity1</string>
    <string name="ic_menu_nightMode_off">关</string>
    <string name="ic_menu_nightMode_on">开</string>
    <string name="menu_favorite">收藏文章</string>
    <string name="menu_top">定位到最顶部</string>
    <string name="menu_bottom">TODO</string>
    <string name="menu_openinbrowser">在浏览器中打开</string>
    <string name="article_title">article_title</string>
    <string name="article_author">article_author</string>
    <string name="article_date">article_date</string>
    <string name="article_readcount">article_readCount</string>
    <string name="article_textlength">article_textLength</string>
    <string name="nightMode">夜间模式</string>
    <string name="title_activity_login">登录</string>
    <!-- Strings related to login -->
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_login">登录</string>
    <string name="action_logout">注销</string>
    <string name="action_profile">个人信息</string>
    <string name="title_activity_person_profile">个人信息</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_auto_night_mode">自动开启夜间模式</string>
    <string name="pref_description_auto_night_mode">22:00到06:00之间自动开启夜间模式</string>

    <string name="pref_lang_t2s">自动繁简转换</string>
    <string name="pref_desc_lang_t2s">显示文字时自动将繁体中文转换成简体中文</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_text_font_size">正文字体大小</string>
    <string-array name="pref_font_size_list_titles">
        <item>较小</item>
        <item>小</item>
        <item>中</item>
        <item>较大</item>
        <item>大</item>
        <item>超大</item>
    </string-array>
    <string-array name="pref_font_size_list_values">
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
    </string-array>

    <string name="pref_title_text_line_space">正文行距</string>
    <string-array name="pref_title_text_line_space_titles">
        <item>较小</item>
        <item>小</item>
        <item>中</item>
        <item>较大</item>
        <item>大</item>
        <item>超大</item>
    </string-array>
    <string-array name="pref_title_text_line_space_values">
        <item>1.0</item>
        <item>1.1</item>
        <item>1.2</item>
        <item>1.3</item>
        <item>1.4</item>
        <item>1.5</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_about">关于</string>
    <string name="image_content_description">image in text</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_news">新闻</string>
    <string name="title_video">视频</string>
    <string name="title_forum">论坛</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_import_articles">导入文章</string>
    <string name="action_import_comments">导入评论</string>
    <string name="action_import_keywords">导入查询历史</string>
</resources>
