<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_favorite"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sort"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_menu_sort"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_title"
                android:title="@string/action_sort_title" />
            <item
                android:id="@+id/action_sort_author"
                android:title="@string/action_sort_author" />
            <item
                android:id="@+id/action_sort_insertDate"
                android:title="@string/action_sort_insertDate" />
        </menu>
    </item>
</menu>