<?xml version="1.0" encoding="utf-8"?><!-- 文章和评论标题item布局 -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/article_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/bgColor">

    <TextView
        android:id="@+id/article_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:maxLines="2"
        android:textAlignment="viewStart"
        android:textColor="?attr/dividerColor"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:maxLines="5"
        android:paddingEnd="4dp"
        android:paddingStart="6dp"
        android:text="@string/article_title"
        android:textAlignment="viewStart"
        android:textColor="?attr/textColor"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/article_placeholder"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/article_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:maxLines="2"
        android:text="@string/article_author"
        android:textColor="?attr/textSecondaryColor"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/article_date"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toEndOf="@+id/article_placeholder"
        app:layout_constraintTop_toBottomOf="@+id/article_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/article_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:maxLines="2"
        android:text="@string/article_date"
        android:textColor="?attr/textSecondaryColor"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/article_textLength"
        app:layout_constraintStart_toEndOf="@+id/article_author"
        app:layout_constraintTop_toBottomOf="@+id/article_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/article_readCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:maxLines="2"
        android:text="@string/article_readcount"
        android:textColor="?attr/textSecondaryColor"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/article_textLength"
        app:layout_constraintTop_toBottomOf="@+id/article_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/article_textLength"
        android:layout_width="93dp"
        android:layout_height="18dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:maxLines="2"
        android:text="@string/article_textlength"
        android:textColor="?attr/textSecondaryColor"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/article_readCount"
        app:layout_constraintStart_toEndOf="@+id/article_date"
        app:layout_constraintTop_toBottomOf="@+id/article_title"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>